update artifacts