@@ -12,15 +12,15 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <junit5.version>5.6.0</junit5.version>
+        <junit5.version>5.6.2</junit5.version>
         <jmh.version>1.23</jmh.version>
-        <kryo.version>5.0.0-RC5</kryo.version>
+        <kryo.version>5.0.0-RC6</kryo.version>
         <avor.version>1.9.2</avor.version>
         <jackson.version>2.10.3</jackson.version>
         <jsoniter.version>0.9.23</jsoniter.version>
         <hessian.version>4.0.63</hessian.version>
         <protobuf-java.version>3.11.4</protobuf-java.version>
-        <sbe.version>1.16.3</sbe.version>
+        <sbe.version>1.17.0</sbe.version>
         <msgpack.version>0.8.20</msgpack.version>
         <lombok.version>1.18.12</lombok.version>
         <mapstruct.version>1.3.1.Final</mapstruct.version>
@@ -118,7 +118,7 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.15.0</version>
+            <version>3.16.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -180,9 +180,13 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>14</source>
+                    <target>14</target>
+                    <release>14</release>
                     <parameters>true</parameters>
+                    <compilerArgs>
+                        <compilerArg>--enable-preview</compilerArg>
+                    </compilerArgs>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
